--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "conding-interview",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node -r sucrase/register src/server.js",
     "test": "node_modules/.bin/jest"
   },
   "author": "lucas@shawandpartners.com",
   "license": "ISC",
   "devDependencies": {
     "jest": "^23.4.1"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "sucrase": "^3.13.0"
   }
 }
